register  feature to firebase implemented

--- a/Instagram Clone/Resources/GoogleService-Info.plist
+++ b/Instagram Clone/Resources/GoogleService-Info.plist
@@ -30,5 +30,9 @@
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
 	<string>1:137012703766:ios:971af36612a9dbfffe3b37</string>
+    <key>DATABASE_URL</key>
+    <string>https://instagram-c6989-default-rtdb.europe-west1.firebasedatabase.app</string>
+
+
 </dict>
 </plist>
